--- a/readme
+++ b/readme
@@ -29,3 +29,13 @@ spring3.1之后的版本和以下配置方式等价
 
 
 Mybatis配置：http://www.cnblogs.com/digdeep/p/4512368.html
+
+
+2017/08/19
+修改 pom.xml 文件，将 mysql-connection-6.0.6 改为 mysql-connection-5.1.26 版本
+修改数据库配置文件
+driverClassName = com.mysql.jdbc.Driver
+#jdbc_url = jdbc:mysql://127.0.0.1/myssm;
+jdbc_url = jdbc\:mysql\://localhost\:3306/test
+jdbc_username = root
+jdbc_password = 123456
