** 新增 dao 层接口 @Repository 注解，解决 service 层注入 dao 层对象报错问题 ** ** 修改 SpringMVC 配置文件，扫描注解范围改为所有包，注释不必要不明确代码块 ** 新增 log4j2 日志，暂不明确是否能使用 -- 昨晚一夜未眠，今天周一上班有点困啊，不说了push收拾上班。

--- a/readme
+++ b/readme
@@ -47,3 +47,12 @@ jdbc_url = jdbc\:mysql\://localhost\:3306/test
 jdbc_username = root
 jdbc_password = 123456
 
+2017/08/20
+
+
+2017/08/21
+昨晚不知怎么的就是睡不着，现在六点多起床看视频，哎。
+
+关于service层中dao层对象userMapper报错问题，已找到解决方法，就是严格按照Spring注解方式。
+参照：http://blog.csdn.net/busbanana/article/details/72954669
+
