** 新增 dao 层接口 @Repository 注解，解决 service 层注入 dao 层对象报错问题 ** ** 修改 SpringMVC 配置文件，扫描注解范围改为所有包，注释不必要不明确代码块 ** 新增 log4j2 日志，暂不明确是否能使用 -- 昨晚一夜未眠，今天周一上班有点困啊，不说了push收拾上班。

--- a/readme
+++ b/readme
@@ -180,3 +180,7 @@ window.onload=function(){
     //要初始化的东西
 }
 
+
+2018/1/7
+idea部署一个项目resource文件夹需要打上源文件的标记
+Moudules-resource 将文件夹设置为源文件夹，否则报错误：Artifact Examination_System:war exploded: Error during artifact deployment.
